# cmake-cookbook

./: 读书笔记.md
chapter-01/recipe-01/: CMakeLists.txt
chapter-01/recipe-01-1/: CMakeLists.txt  build.sh  hello-world.cpp
chapter-01/recipe-03/cxx-example/: CMakeLists.txt  build.sh
chapter-01/recipe-03/cxx-objlib-example/: CMakeLists.txt  build.sh  hello-world.cpp
chapter-01/recipe-04/cxx-example/: CMakeLists.txt  build.sh  message.cpp  message.hpp
chapter-01/recipe-05/: CMakeLists.txt  build.sh  hello-world.cpp
chapter-01/recipe-06/: CMakeLists.txt  build.sh
chapter-01/recipe-07/: CMakeLists.txt  build.sh
chapter-01/recipe-08/: CMakeLists.txt
chapter-01/recipe-09/: CMakeLists.txt  build.sh
chapter-01/recipe-10/: CMakeLists.txt  build.sh
chapter-02/recipe-01/: CMakeLists.txt  build.sh
